fix card snappiness on iOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-font-family: 'Poppins', sans-serif;
+body {
+  font-family: 'Poppins', sans-serif;
+  /* touch-action: none;
+  -ms-touch-action: none; */
 }
